<resources>
    <string name="base_url">https://face-location.com/</string>

    <string name="app_name">Facelocation</string>
    <string name="localing">ЛОКАЛІЗУЙСЯ</string>
    <string name="tos_hint">Скориставшись цим додатком Ви\n погоджуєтесь з політикою надання послуг</string>
    <string name="main_descriptor">дозволяє легко планувати події,\n та заохочувати на них людей</string>
    <string name="rules">Правила надання послуг та\n користування мобільним додатком</string>
    <string name="app_name_uppercase">FACELOCATION</string>
    <string name="tos_cancel">НЕ ПОГОДЖУЮСЬ</string>
    <string name="tos_accept">ПОГОДЖУЮСЬ</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="geo_search">Пошук</string>
    <string name="my_events">Події, що я створив</string>
    <string name="visited_events">Події, які я відвідав</string>
    <string name="my_locations">Локації, що я створив</string>
    <string name="create_event">Створити нову подію</string>
    <string name="add_location">Додати нову локацію</string>
    <string name="support">Служба підтримки</string>
    <string name="exit">Вийти</string>
    <string name="bottom_menu_title">Face-Location.com</string>
    <string name="subtext">сервіс, який об’єднує людей\n навколо хороших і цікавих ідей!</string>
    <string name="default_location">Маркер у Львові</string>
    <string name="permission_needed">Ваше місце розташування</string>
    <string name="location_permission_text">Щоб використовувати Facelocation дозвольте доступ до вашої локації</string>
    <string name="my_location">Моя позиція</string>
    <string name="permission_denied">Доступ не надано</string>
    <string name="title_activity_new_location">NewLocation</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logo">Logo</string>
    <string name="back">НАЗАД</string>
    <string name="titleForNewLocationAdding">Додати нову локацію</string>
    <string name="enter_title_location_tip">Вкажіть назву локації</string>
    <string name="enter_location_name">Назва локації</string>
    <string name="chose_photo">Додайте фото</string>
    <string name="chose_photo_gallery">ВИБРАТИ ФОТО ЛОКАЦІЇ</string>
    <string name="forward">ПРОДОВЖИТИ</string>
    <string name="title_activity_maps_activityiiiii">Map</string>
    <string name="something_about">розкажіть щось про це місце…</string>
    <string name="something_about_tip">Вкажіть опис локації</string>
    <string name="add_concatc">Контакт (не обовязково)</string>
    <string name="do_public">Опублікувати локацію?</string>
    <string name="contact_tip">контакт</string>
    <string name="else_text">інакше буде збережено у чернетках</string>
    <string name="hello">Вітаємо з поверненням! Увійдіть\n у свій аккаунт</string>
    <string name="enterEmail">Вкажіть e-mail</string>
    <string name="your_email">Ваш e-mail</string>
    <string name="enter_email_hint">ваш email@domain.com</string>
    <string name="enter_pass">Вкажіть пароль</string>
    <string name="pass_hint">пароль для входу</string>
    <string name="registration">Реєстрація</string>
    <string name="login">Увійти</string>
    <string name="email_for_login">ця адреса буде використовуватись для входу</string>
    <string name="next">Далі</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="create_pass">вигадайте свій надійний пароль </string>
    <string name="title_activity_add_location_fifth">Sign in</string>
    <string name="create_event_title">Створити подію у цій локації?</string>
    <string name="event_name">Назва події</string>
    <string name="event_hint">не більше 70 символів</string>
    <string name="required_field">це поле обовязкове для заповненя</string>
    <string name="chose_category">Виберіть категорію</string>
    <string name="cancel_event_creation">ВІДМІНИТИ</string>
    <string name="create_new_event">Створити</string>
    <string name="event_description">Вкажіть опис події</string>
    <string name="what_will_happens">що буде відбуватись?</string>
    <string name="create_event_now">Створити подію</string>
    <string name="event_type">Тип вашої події</string>
    <string name="chose_event_photo">Виберіть з ваших фото</string>
    <string name="event_photo">Фото події</string>
    <string name="places_quantity">К-сть місць</string>
    <string name="places_quantity_hint">вкажіть к-сть місць</string>
    <string name="period">Періодичність?</string>
    <string name="event_start">Коли починається подія?</string>
    <string name="enter_date">вкажіть дату</string>
    <string name="event_end">Коли закінчується?</string>
    <string name="schedule">Розклад вашої події</string>
    <string name="add_schedule">ДОДАТИ РОЗКЛАД</string>
    <string name="specify_sponsors">ВКАЗАТИ СПОНСОРІВ</string>
    <string name="have_sponsors">У вас є спонсори?</string>
    <string name="create">ЗАВЕРШИТИ</string>
    <string name="event_first_action">З чого починається подія?</string>
    <string name="schedule_hint">наприклад: знайомство</string>
    <string name="time_start">О котрій годині?</string>
    <string name="time_end">Завершення?</string>
    <string name="add_day">ДОДАТИ ДЕНЬ?</string>
    <string name="add_paragraph">ДОДАТИ ПУНКТ?</string>
    <string name="day">-Й ДЕНЬ</string>
    <string name="next_point">Наступний пункт розкладу</string>
    <string name="next_point_hint">наступний пункт</string>
    <string name="next_day_schedule">Розклад наступного дня</string>
    <string name="next_day_paragraf">пункт розкладу</string>
    <string name="search_results">РЕЗУЛЬТАТИ</string>
    <string name="back_to_map">НАЗАД ДО КАРТИ</string>
    <string name="whats_your_question">Яке ваше запитання</string>
    <string name="your_trouble">Вкажіть опис проблеми</string>
    <string name="help">вкажіть як ми можемо Вам допомогти?</string>
    <string name="send">НАДІСЛАТИ</string>
    <string name="add_photo">Додайте своє фото</string>
    <string name="friend_reco">щоб друзі змогли вас впізнати</string>
    <string name="your_name">Вкажіть своє імя</string>
    <string name="no_name">імя не вказано</string>
    <string name="soname">Вкажіть своє прізвище</string>
    <string name="no_soname">прізвище не вказано</string>
    <string name="phone_number">Вкажіть номер телефону</string>
    <string name="numbers">000 - 000 - 00 - 00</string>
    <string name="job">Вкажіть місце роботи</string>
    <string name="no_job">місце роботи не вказано</string>
    <string name="save">ЗБЕРЕГТИ ЗМІНИ</string>
    <string name="edit_avatar">Змінити фото</string>
    <string name="your_name_menu">Ваше ім’я?</string>
    <string name="edit_data">редагувати данні</string>
    <string name="me_events_title">Мої події</string>
    <string name="create_new_event_btn">Створити нову подію</string>
    <string name="create_new_location">Створити нову локацію</string>
    <string name="now_here">зараз тут:</string>
    <string name="chose_file">Виберіть файл</string>
    <string name="startChat">Ропочати приватний чат?</string>
    <string name="members">учасники:</string>
    <string name="question">Тема запитання</string>
    <string name="location_text">ЛОКАЦІЯ</string>
    <string name="event_desc">Опис події</string>
    <string name="localiz">локалізуватись</string>
    <string name="going">Збираються відвідати</string>
    <string name="you_email_address">Ваша електронна адреса</string>


    <!--Event category names-->
    <string-array name="event_types">
        <item>концерт</item>
        <item>бізнес</item>
        <item>розваги</item>
        <item>акції</item>
        <item>спорт</item>
        <item>зустріч</item>
        <item>кафе</item>
        <item>семінар</item>
        <item>конференція</item>
        <item>тренінг</item>
    </string-array>


    <!--Event publicity-->
    <string-array name="event_publicity">
        <item>Відкритий</item>
        <item>По запрошенню</item>
    </string-array>

    <!--Event period-->
    <string-array name="event_period">
        <item>Одноразово</item>
        <item>Щотижнево</item>
        <item>Без кінця</item>
    </string-array>


    <string name="title_activity_my_app_actions">НАЗАД ДО КАРТИ</string>
    <string name="tab_text_1">МОЇ ПОДІЇ</string>
    <string name="tab_text_2">ВІДВІДАВ</string>
    <string name="tab_text_3">МОЇ ЛОКАЦІЇ</string>


    <string name="locals">МІСЦЕВІ</string>
    <string name="chat">ЧАТ</string>
    <string name="attention">УВАГА</string>
    <string name="files">ФАЙЛИ</string>
    <string name="no_such_location">Такої локації не існує</string>
    <string name="def_avatar">https://face-location.com/assets/img/icons/avatar.svg</string>
    <string name="def_avatar_second">/assets/img/icons/avatar.svg</string>
    <string name="on_air">Зараз відбувається</string>
    <string name="off_air">Вже закінчилась</string>
    <string name="will_be">Розпочнеться у майбутньому</string>
    <string name="semelar_events">СХОЖІ ПОДІЇ</string>
    <string name="view_event">переглянути</string>
    <string name="save_changes">Зберегти зміни</string>
    <string name="edit_text">РЕДАГУВАТИ</string>
    <string name="mess_hint">Ваше повідомлення...</string>
    <string name="new_group_chat">ВКАЖІТЬ НАЗВУ ЧАТУ</string>
    <string name="chat_name">назва групового чату...</string>
    <string name="create_chat">СТВОРИТИ</string>
    <string name="chose_partisipent">ВИБЕРІТЬ УЧАСНИКІВ</string>
    <string name="chose_users">Виберіть учасників чату</string>
    <string name="ban_notofocation">Ви були заблоковані на цьому івенті</string>
    <string name="group_chats">ГРУПОВІ ЧАТИ</string>
    <string name="edit_location">Редагувати локацію</string>
    <string name="edit_event">Редагувати подію</string>

</resources>
