<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryMoreLighter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.face_location.facelocation.StartActivity"
    tools:ignore="MissingPrefix"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/addNewEventTitle"
        fontPath="fonts/OpenSans-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/create_event_title"
        android:textColor="@color/title_color_for_location_adding"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackView" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryMoreLighter"
        android:hint="@string/event_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEventTitle" />

    <ImageView
        android:id="@+id/backButtonImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/back"
        android:src="@drawable/leftarrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buttonBackView"
        fontPath="fonts/OpenSans-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backButtonImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterEventTitle"
        fontPath="fonts/OpenSans-SemiBold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/event_name"
        android:textColor="@color/colorTextLight"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewEventTitle" />

    <LinearLayout
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rec"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choseCategory">

        <Spinner
            android:id="@+id/spinnerEventType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextInput" />
    </LinearLayout>

    <TextView
        android:id="@+id/requiredАield"
        fontPath="fonts/OpenSans-SemiBold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/required_field"
        android:textColor="@color/colorTextLight"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <TextView
        android:id="@+id/choseCategory"
        fontPath="fonts/OpenSans-SemiBold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/chose_category"
        android:textColor="@color/colorTextLight"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requiredАield" />

    <Button
        android:id="@+id/cancelEventCreation"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/rec"
        android:text="@string/cancel_event_creation"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/successEventCreation"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rec_green"
        android:text="@string/create_new_event"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>

